feat: predict with multiple models (#31)
* feat: predict with multiple models

Co-authored-by: Alexandre-P <picosson.alexandre@gmail.com>

* fix

* isort

* rm old refs

Co-authored-by: Alexandre-P <picosson.alexandre@gmail.com>

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "from model_manipulation_software import Model\n",
-    "from model_manipulation_software import PredictionSystem\n",
+    "from model_manipulation_software import PreparedData\n",
     "\n",
     "import melloddy_tuner.utils.helper\n",
     "import pandas as pd\n",
@@ -139,7 +139,7 @@
    "id": "8aa83cfb",
    "metadata": {},
    "source": [
-    "Build a `PredictionSystem` object that we will use to perform predictions:"
+    "Build a `PreparedData` object that we will use to perform predictions:"
    ]
   },
   {
@@ -147,14 +147,24 @@
    "execution_count": 3,
    "id": "502d037f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read new config file.\n",
+      "Read new key file.\n"
+     ]
+    }
+   ],
    "source": [
     "encryption_key_path = pathlib.Path(\"../inputs/config/example_key.json\")\n",
     "parameters_path = pathlib.Path(\"../inputs/config/example_parameters.json\")\n",
     "\n",
-    "predictor = PredictionSystem(\n",
+    "prepared_data = PreparedData(\n",
     "    encryption_key=encryption_key_path,\n",
     "    preparation_parameters=parameters_path,\n",
+    "    smiles=data,\n",
     ")"
    ]
   },
@@ -192,18 +202,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Read new config file.\n",
-      "Read new key file.\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
       "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
       "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
       "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
@@ -471,7 +472,7 @@
     }
    ],
    "source": [
-    "cls_predictions, reg_predictions, failing_smiles = predictor.predict(cls_model, data)\n",
+    "cls_predictions, reg_predictions = cls_model.predict(prepared_data)\n",
     "\n",
     "cls_predictions.head()"
    ]
@@ -494,7 +495,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
       "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
       "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
       "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
@@ -761,15 +761,18 @@
     }
    ],
    "source": [
-    "cls_predictions, reg_predictions, failing_smiles = predictor.predict(cls_model, data, classification_tasks=[1, 4])\n",
+    "cls_predictions, reg_predictions = cls_model.predict(prepared_data, classification_tasks=[1, 4])\n",
     "\n",
     "cls_predictions.head()"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "84d30969e69f111a0c17472c01be01974868b7ec6d9bc5ff58387ced7b374702"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.9 ('mms_new')",
    "language": "python",
    "name": "python3"
   },
@@ -783,7 +786,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
