feat: load model on demand (#35)
* feat: load model on demand

* update readme

* new link

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -765,6 +765,29 @@
     "\n",
     "cls_predictions.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "037afa10",
+   "metadata": {},
+   "source": [
+    "By default, the model is loaded in memory when model.predict() is called, and unloaded before it returns the predictions.\n",
+    "If you want to keep the model in memory, you can initialize it with `load_on_demand = False`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4f257208",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model(model_path, load_on_demand=False)\n",
+    "\n",
+    "# you can do multiple predictions and then unload it\n",
+    "\n",
+    "model.unload()"
+   ]
   }
  ],
  "metadata": {
