chore: update readme and dependencies

--- a/examples/example.ipynb
+++ b/examples/example.ipynb
@@ -15,7 +15,16 @@
             "execution_count": 1,
             "id": "8a472130",
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "/Users/fgelus/.virtualenvs/mms/lib/python3.9/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+                        "  from .autonotebook import tqdm as notebook_tqdm\n"
+                    ]
+                }
+            ],
             "source": [
                 "from melloddy_predictor import Model\n",
                 "from melloddy_predictor import PreparedData\n",
@@ -201,17 +210,6 @@
             "id": "a6074984",
             "metadata": {},
             "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n"
-                    ]
-                },
                 {
                     "data": {
                         "text/html": [
@@ -491,16 +489,6 @@
             "id": "45d53230",
             "metadata": {},
             "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n",
-                        "[W ParallelNative.cpp:206] Warning: Cannot set number of intraop threads after parallel work has started or after set_num_threads call when using native parallel backend (function set_num_threads)\n"
-                    ]
-                },
                 {
                     "data": {
                         "text/html": [
@@ -792,10 +780,10 @@
     ],
     "metadata": {
         "interpreter": {
-            "hash": "84d30969e69f111a0c17472c01be01974868b7ec6d9bc5ff58387ced7b374702"
+            "hash": "b69c526ab2a100f8d03cae519a113d9d5e7ee86471cc1fa1cc606eca509863b6"
         },
         "kernelspec": {
-            "display_name": "Python 3.9.9 ('mms_new')",
+            "display_name": "Python 3.9.9 ('mms')",
             "language": "python",
             "name": "python3"
         },
